--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
       </header>
       <br><br>
       <div class="hero">
-         <div class="mt-5 pt-5 ml-2 text-center" data-aos="fade-right" style="max-width:500px">
-            <br><br>
-            <h1 style="text-shadow: 2px 2px black;font-size:40px;" class="mt-5 text-white pt-5">&nbsp;Soluções Eficientes na<br> Logística de Contêineres</h1>
-            <p class="text-white" style="font-size:20px;">A Contrail oferece soluções logísticas multimodais aos<br>seus clientes combinando a confiabilidade ferroviária<br> e a flexibilidade rodoviária</p>
+         <div class="mt-5 pt-5 float-left" data-aos="fade-right">
+            <div class="text-center">
+               <h1 style="text-shadow: 2px 2px black;" style="font-size:2vw;" class=" mt-5 text-white pt-5 ml-0">&nbsp;Soluções Eficientes na<br> Logística de Contêineres</h1>
+               <p class="text-white d-xl-block  d-lg-block d-md-block d-none p-3" style="font-size:2vw;">A Contrail oferece soluções logísticas multimodais aos<br>seus clientes combinando a confiabilidade ferroviária<br> e a flexibilidade rodoviária</p>
+            </div>
          </div>
       </div>
       <!-- PARCEIROS -->
