--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
            </div>
            <div class="col-md-3"  style="position:relative;z-index:20;">
             <a href="http://www1.eurogate.de/" target="_blank">
-              <img src="eurogate.png" class="" data-aos="fade-right" width="250px">
+              <img src="eurogate.png" class="mt-1" data-aos="fade-right" width="250px">
             </a>
            </div>
            <div class="col-md-3 mt-4">
