--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
          <div class="row">
             <div class="col-md-6 bg-dark p-2 text-center">
                <h2 class="text-center text-white p-5">SUSTENTABILIDADE</h2>
-               <p class="lead text-center" style="font-size:2vw;">Carga de 1 trem equivale a<br>42 caminhões</p>
+               <p class="text-center m-2" style="font-size:3vw;">Carga de 1 trem equivale a<br>42 caminhões</p>
                <div class="text-left container text-center d-flex justify-content-around" >
                   <a href="esg.html" style="position:relative;z-index:20;font-size:30px;" class="text-white my-auto p-2">Saiba mais <span class="setaAnimada arrow"></span></a>
                   <img src="selo_trans.png">
