--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
          <div class="row">
             <div class="col-md-6 bg-dark p-2 text-center">
                <h2 class="text-center text-white p-5">SUSTENTABILIDADE</h2>
-               <p class="text-center m-2 display-4 p-5" style="">Carga de 1 trem equivale a<br>42 caminhões</p>
+               <p class="text-center m-2 display-sm-1 display-4 p-5" style="">Carga de 1 trem equivale a<br>42 caminhões</p>
                <div class="text-left container text-center d-flex justify-content-around" >
                   <a href="esg.html" style="position:relative;z-index:20;font-size:30px;" class="text-white my-auto p-2">Saiba mais <span class="setaAnimada arrow"></span></a>
                   <img src="selo_trans.png">
@@ -296,9 +296,9 @@
          </div>
          <!-- fim nova vantagem -->
       </section>
-      <div id="faleConosco" style="z-index:20;position:relative;" class="parallax  p-5">
-         <div class="container" data-aos="zoom-in-up">
-            <div class="mx-auto rounded p-5 " style="background:#007351;max-width:600px;">
+      <div id="faleConosco" style="z-index:20;position:relative;" class="w-100 parallax  p-0">
+         <div class="" data-aos="zoom-in-up">
+            <div class="mx-auto rounded p-5" style="background:#007351;border:solid 2px blue;">
                <h3 class="h3 m-3 text-center text-white font-weight-bold">Fale Conosco!</h3>
                <p class="text-white">Tem alguma dúvida, sugestão ou crítica a fazer? Então entre em contato conosco. Suas dúvidas serão esclarecidas e sua opinião é fundamental para o nosso aperfeiçoamento.</p>
                <div class="input-group mb-3">
