--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
          </div>
          <!-- fim nova vantagem -->
       </section>
-      <div id="faleConosco" style="z-index:20;position:relative;" class="w-100 parallax  p-0">
-         <div class="" data-aos="zoom-in-up">
-            <div class="mx-auto rounded p-5" style="background:#007351;border:solid 2px blue;">
+      <div id="faleConosco" style="z-index:20;position:relative;" class="w-100 parallax py-5">
+         <div class="container" data-aos="zoom-in-up">
+            <div class="mx-auto rounded p-5 w-100" style="background:#007351;">
                <h3 class="h3 m-3 text-center text-white font-weight-bold">Fale Conosco!</h3>
                <p class="text-white">Tem alguma dúvida, sugestão ou crítica a fazer? Então entre em contato conosco. Suas dúvidas serão esclarecidas e sua opinião é fundamental para o nosso aperfeiçoamento.</p>
                <div class="input-group mb-3">
