--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
       <!-- PARCEIROS -->
       <section>
-         <h2 id="vantagensH1" class="h2-responsive mt-3 pt-5 pl-4 pt-2 font-weight-bold" style="border:solid 2px red; z-index:20;position:relative;color:#05452E;">SOLIDEZ FINANCEIRA E OPERACIONAL</h2>
+         <h2 id="vantagensH1" class="h2-responsive mt-3 pt-5 pl-4 pt-2 font-weight-bold" style="z-index:20;position:relative;color:#05452E;">SOLIDEZ FINANCEIRA E OPERACIONAL</h2>
          <div class="row text-center align-items-center mt-n5 p-5">
            <div class="col-md-3" style="position:relative;z-index:20;">
                <a href="https://edlp.com.br/"  target="_blank">
