--- a/ondeestamos.html
+++ b/ondeestamos.html
@@ -107,7 +107,7 @@
       <br><br>
       <div class="hero4 pt-5">
          <div class="mt-5 pt-5">
-            <h1 class=" ml-5 display-1 font-weight-bold" style="color:white;">ONDE ESTAMOS</h1>
+            <h1 class=" ml-5 font-weight-bold" style="color:white;font-size:7vw;">ONDE ESTAMOS</h1>
          </div>
       </div>
       <div style="background:#389177;">
@@ -120,7 +120,7 @@
                <p class="text-white lead">O TIJU - Terminal Intermodal de Jundiaí, chegou para ampliar a área de atuação da Contrail Logística<br> no Interior de São Paulo, de forma a trazer novas alternativas em soluções logísticas para os clientes<br> que operam Porto de Santos com importação, exportação ou cabotagem.</p>
                <span class="text-white font-weight-bold lead">Av Antônio Frederico Ozanan, 1805 - Lote 1 – Vila Santana 2 – Jundiaí</span>
                <div class="container mt-5 text-center">
-                  <img class="" src="tiju.jpeg">
+                  <img class="img-fluid" src="tiju.jpeg">
                </div>
                <div class="d-flex justify-content-around flex-wrap mt-5">
                   <div
