--- a/solucoes.html
+++ b/solucoes.html
@@ -112,7 +112,7 @@
       <!-- novo soluções -->
             <div class="hero7 pt-5">
                <div class="mt-5 pt-5">
-                  <h1 class=" ml-5 display-1 font-weight-bold" style="color:white;">SOLUÇÕES</h1>
+                  <h1 class=" ml-5 font-weight-bold" style="color:white;font-size:7vw;">SOLUÇÕES</h1>
                </div>
             </div>
       <!--  fim novo soluções-->
