--- a/solucoes.html
+++ b/solucoes.html
@@ -121,13 +121,13 @@
          <div class="flip-card m-5">
             <div class="flip-card-inner">
                <div class="flip-card-front">
-                  <div class="text display-1" style="margin-left:-1vw;padding-top:10vh;">
+                  <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Transporte<br> Multimodal</h4>
                   </div>
                </div>
-               <div class="flip-card-back p-3">
-                  <div class="text-verso">
+               <div class="flip-card-back">
+                  <div class="text-verso mt-5 p-3 ml-2">
                      <h6>• Transporte Ferroviário</h6>
                      <h6>• Transporte Rodoviário</h6>
                      <h6>• Gerenciamento de Risco</h6>
@@ -139,17 +139,17 @@
          <div class="flip-card mt-5">
             <div class="flip-card-inner">
                <div class="flip-card-front">
-                  <div class="text display-1" style="margin-left:-2vw;padding-top:10vh;">
+                  <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Depot</h4>
                   </div>
                </div>
-               <div class="flip-card-back p-3">
-                  <div class="text-verso">
-                     <h6>• Contrato com os principais armadores</h6>
-                     <h6>• Reparo de Contêineres</h6>
-                     <h6>• Reutilização de Contêineres</h6>
-                     <h6>• Encerramento de Demurrage</h6>
+               <div class="flip-card-back">
+                  <div class="text-verso mt-5">
+                     <h6 class="h6">• Contrato com os principais armadores</h6>
+                     <h6 class="h6">• Reparo de Contêineres</h6>
+                     <h6 class="h6">• Reutilização de Contêineres</h6>
+                     <h6 class="h6">• Encerramento de Demurrage</h6>
                   </div>
                </div>
             </div>
@@ -161,13 +161,13 @@
          <div class="flip-card m-5">
             <div class="flip-card-inner">
                <div class="flip-card-front">
-                  <div class="text display-1" style="margin-left:-1vw;padding-top:10vh;">
+                  <div class="text display-1" style="margin-left:-1vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Armazenagem</h4>
                   </div>
                </div>
-               <div class="flip-card-back p-3">
-                  <div class="text-verso">
+               <div class="flip-card-back">
+                  <div class="text-verso mt-5 p-3 ml-2">
                      <h6>• Armazenagem Conteiner</h6>
                      <h6>• Estufagem de Conteiner</h6>
                      <h6>• Desova de Conteiner</h6>
@@ -179,13 +179,13 @@
          <div class="flip-card mt-5">
             <div class="flip-card-inner">
                <div class="flip-card-front">
-                  <div class="text display-1" style="margin-left:-2vw;padding-top:10vh;">
+                  <div class="text display-1 mx-auto" style="margin-left:-2vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Gestão da Informação</h4>
                   </div>
                </div>
-               <div class="flip-card-back p-3">
-                  <div class="text-verso">
+               <div class="flip-card-back">
+                  <div class="text-verso mt-5 pl-2">
                      <h6>• Tracking da Carga</h6>
                      <h6>• APP para motoristas</h6>
                      <h6>• Follow up das operações 24x7</h6>
