--- a/esg.html
+++ b/esg.html
@@ -144,7 +144,7 @@
                         <span><i class='display-4 p-0 m-0 bx bx-right-arrow-alt'></i></span><br>
                         <h5>Redução de 70% na emissão de CO<sub>2</sub></h5>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 text-center">
                          <h1 id="example" data-max-number="42" class="display-1">0<br><h5>Caminhões</h5></h1>
                       </div>
                   </div>
