--- a/quemsomos.html
+++ b/quemsomos.html
@@ -114,7 +114,7 @@
          <div class="float-right mt-5 pt-2 mr-2" data-aos="fade-right" style="max-width:800px">
             <br><br>
             <h1 style="text-shadow: 2px 2px black;" class=" p-4 text-white pt-5">QUEM SOMOS</h1>
-            <p class="text-white text-justify m-3" style="font-size:20px;">
+            <p class="text-white text-justify m-3" style="font-size:4vw;">
                &nbsp;&nbsp;&nbsp;&nbsp;Fundada em 2010 pela EDLP – Estação da Luz Participações, a Contrail Logística S.A. surgiu de uma parceria entre EDLP e MRS Logística. Juntas, desenvolveram um modelo logístico para o transporte de contêineres na região mais desenvolvida do país, transpondo de forma eficiente e sustentável a Serra do Mar, que separa o Porto de Santos do Planalto Paulista.<br>
                &nbsp;&nbsp;&nbsp;&nbsp;Em 2012 o Fundo de Infraestrutura gerido pelo BTG Pactual, maior banco de investimentos da América Latina,  tornou-se acionista da empresa, trazendo solidez financeira para o negócio.<br>  
      &nbsp;&nbsp;&nbsp;&nbsp;A Eurogate, maior operadora independente de contêineres da Europa, tornou-se acionista da Contrail em 2015, contribuindo com seu grande expertise comercial e operacional.<br>
