--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <br><br>
       <div class="hero">
          <div class="mt-5 pt-5 float-left" data-aos="fade-right">
-            <div class="text-center">
+            <div class="text-center m-2">
                <h1 style="text-shadow: 2px 2px black;" style="font-size:2vw;" class=" mt-5 text-white pt-5 ml-0">&nbsp;Soluções Eficientes na<br> Logística de Contêineres</h1>
-               <p class="text-white d-xl-block  d-lg-block d-md-block d-none p-3" style="font-size:2vw;">A Contrail oferece soluções logísticas multimodais aos<br>seus clientes combinando a confiabilidade ferroviária<br> e a flexibilidade rodoviária</p>
+               <p class="text-white d-xl-block  d-lg-block d-md-block d-none p-3" style="font-size:1vw;">A Contrail oferece soluções logísticas multimodais aos<br>seus clientes combinando a confiabilidade ferroviária<br> e a flexibilidade rodoviária</p>
             </div>
          </div>
       </div>
@@ -159,7 +159,7 @@
          <div class="row">
             <div class="col-md-6 bg-dark p-2 text-center">
                <h2 class="text-center text-white p-5">SUSTENTABILIDADE</h2>
-               <p class="text-center m-2 display-sm-1 display-4 p-5" style="">Carga de 1 trem equivale a<br>42 caminhões</p>
+               <p class="text-center m-2 display-sm-1 p-5" style="font-size:2vw;">Carga de 1 trem equivale a<br>42 caminhões</p>
                <div class="text-left container text-center d-flex justify-content-around" >
                   <a href="esg.html" style="position:relative;z-index:20;font-size:30px;" class="text-white my-auto p-2">Saiba mais <span class="setaAnimada arrow"></span></a>
                   <img src="selo_trans.png">
