--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="hero">
          <div class="mt-5 pt-5 float-left" data-aos="fade-right">
             <div class="text-center m-2">
-               <h1 style="text-shadow: 2px 2px black;" style="font-size:2vw;" class=" mt-5 text-white pt-5 ml-0">&nbsp;Soluções Eficientes na<br> Logística de Contêineres</h1>
+               <h1 style="text-shadow: 2px 2px black;" style="font-size:2vw;" class="ml-2 mt-5 text-white pt-5 ml-0">&nbsp;Soluções Eficientes na<br> Logística de Contêineres</h1>
                <p class="text-white d-xl-block  d-lg-block d-md-block d-none p-3" style="font-size:1vw;">A Contrail oferece soluções logísticas multimodais aos<br>seus clientes combinando a confiabilidade ferroviária<br> e a flexibilidade rodoviária</p>
             </div>
          </div>
