--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
            </div>
          </div>
       </section>
+               <h2 id="vantagensH1" class="mt-3 ml-3 font-weight-bold" style="z-index:20;position:relative;color:#05452E;">PRINCIPAIS VANTAGENS</h2>
  <section class="container p-3">
-         <h2 id="vantagensH1" class="mt-3 font-weight-bold" style="z-index:20;position:relative;color:#05452E;">PRINCIPAIS VANTAGENS</h2>
+
          <!-- vantagens comeco-->
          <div class="py-5">
          <div class="container" style="z-index: 20;position:relative;">
