--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                <div class="col-6 col-xl-2 px-2">
                   <h1 class="mb-0 site-logo">
                      <a href="index.html">
-                     <img src="logo-2022-rgb.png" class="" id="logoBranco" width="200px">
-                     <img src="logo-2022.png" id="logoPreto" width="210px">
+                     <img src="logo-2022-rgb.png" class="mb-2" id="logoBranco" width="200px">
+                     <img src="logo-2022.png" id="logoPreto" class="mb-2" width="210px">
                      </a>
                   </h1>
                </div>
