--- a/solucoes.html
+++ b/solucoes.html
@@ -112,7 +112,8 @@
       <!-- novo soluções -->
             <div class="hero7 pt-5">
                <div class="mt-5 pt-5">
-                  <h1 class=" ml-5 font-weight-bold" style="color:white;font-size:7vw;">SOLUÇÕES</h1>
+                  <h1 style="text-shadow: 2px 2px black;" class="display-4 p-4 text-white pt-5">SOLUÇÕES</h1>
+                 <!--  <h1 class=" ml-5 font-weight-bold" style="color:white;font-size:7vw;">SOLUÇÕES</h1> -->
                </div>
             </div>
       <!--  fim novo soluções-->
