--- a/esg.html
+++ b/esg.html
@@ -122,9 +122,9 @@
       </div>      
     </header>
     <br><br>
-    <div class="hero3">
+    <div class="hero3 pt-5">
       <div class="mt-5 pt-5">
-        <h1 class="text-white ml-5 display-1 font-weight-bold">ESG</h1>
+        <h1 class="text-white ml-5 display-3 font-weight-bold">ESG</h1>
       </div>
     </div>
     <div class="" style="background:#007351;">
