--- a/ondeestamos.html
+++ b/ondeestamos.html
@@ -117,7 +117,7 @@
          <div class="container text-right" data-aos="fade-left">
             <img src="newmap.jpg" class="img-fluid rounded">
          </div>
-         <div class="tiju_wrapper p-1">
+         <div class="tiju_wrapper p-1" data-aos="fade-right">
             <div class="tiju m-5">
                <h2 class="text-white font-weight-bold">TERMINAL<br>INTERMODAL DE JUNDIAÍ (TIJU)</h2>
                <p class="text-white lead">O TIJU - Terminal Intermodal de Jundiaí, chegou para ampliar a área de atuação da Contrail Logística<br> no Interior de São Paulo, de forma a trazer novas alternativas em soluções logísticas para os clientes<br> que operam Porto de Santos com importação, exportação ou cabotagem.</p>
