--- a/solucoes.html
+++ b/solucoes.html
@@ -112,7 +112,7 @@
       <!-- novo soluções -->
             <div class="hero7 pt-5">
                <div class="mt-4">
-                  <h1 class="text-white ml-5 display-3 font-weight-bold">SOLUÇÕES</h1>
+                  <h1 class=" text-white ml-5 display-3 font-weight-bold">SOLUÇÕES</h1>
                <!--    <h1 style="text-shadow: 2px 2px black;" class="display-3 p-4 text-white pt-5">SOLUÇÕES</h1> -->
                  <!--  <h1 class=" ml-5 font-weight-bold" style="color:white;font-size:7vw;">SOLUÇÕES</h1> -->
                </div>
@@ -122,10 +122,10 @@
       <div style="max-width:900px;margin:0 auto;z-index:20;position:relative;" class="pt-5 d-flex flex-wrap justify-content-around">
          <div class="flip-card m-5">
             <div class="flip-card-inner">
-               <div class="flip-card-front">
+               <div class="flip-card-front text-white" style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
-                     <h4>Transporte<br> Multimodal2</h4>
+                     <h4>Transporte<br> Multimodal</h4>
                   </div>
                </div>
                <div class="flip-card-back">
@@ -140,7 +140,7 @@
          </div>
          <div class="flip-card mt-5">
             <div class="flip-card-inner">
-               <div class="flip-card-front">
+               <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Depot</h4>
@@ -159,10 +159,10 @@
       </div>
       <!-- DIV DE CIMA -->
       <!-- DIV DE CIMA -->
-      <div style="max-width:900px;margin:0 auto;z-index:20;position:relative;" class="pt-5 d-flex flex-wrap justify-content-around">
+      <div style="border:solid 2px red;max-width:900px;margin:0 auto;z-index:20;position:relative;" class="pt-5 d-flex flex-wrap justify-content-around"  style="border:solid 2px pink;">
          <div class="flip-card m-5">
             <div class="flip-card-inner">
-               <div class="flip-card-front">
+               <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1" style="margin-left:-1vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Armazenagem</h4>
@@ -180,7 +180,7 @@
          </div>
          <div class="flip-card mt-5">
             <div class="flip-card-inner">
-               <div class="flip-card-front">
+               <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="margin-left:-2vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
                      <h4>Gestão da Informação</h4>
