--- a/quemsomos.html
+++ b/quemsomos.html
@@ -111,7 +111,7 @@
       </header>
       <br><br>
       <div class="hero2">
-         <div class="float-right mt-5 pt-2 mr-2 d-md-block d-none" data-aos="fade-right" style="max-width:800px">
+         <div data-aos="fade-left" class="float-right mt-5 pt-2 mr-2 d-md-block d-none" data-aos="fade-right" style="max-width:800px">
             <br><br>
             <h1 class="text-white ml-5 display-3 font-weight-bold">QUEM SOMOS</h1>
           <!--   <h1 style="text-shadow: 2px 2px black;" class="display-4 p-4 text-white pt-5">QUEM SOMOS</h1> -->
@@ -133,6 +133,10 @@
             </p>
          </div>
       </div>
+      <div class="p-5 hero8" style="background-color:rgba(47,99,83,1);" data-aos="flip-left">
+             
+      </div>
+
       <!-- <div class="hero5">
          <div class="row">
            <div class="col-md-4 p-5">
@@ -146,7 +150,7 @@
 
       </div> -->
       <!-- footer -->
-      <div class="" style="background:#007351;">
+      <div class="pt-3" style="background:#007351;">
          <!-- INICIO NOVO FOOTER -->
           <footer id="footer" class="footer-1 p-3">
              <div class="main-footer widgets-dark typo-light">
