--- a/solucoes2.html
+++ b/solucoes2.html
@@ -13,8 +13,8 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Style -->
-      <link rel="stylesheet" href="css/backup.css">
-      <title>Website Menu #1</title>
+      <link rel="stylesheet" href="css/style.css">
+      <title>Website Menu #12</title>
    </head>
    <body>
       <div class="site-mobile-menu site-navbar-target">
