--- a/solucoes.html
+++ b/solucoes.html
@@ -125,15 +125,15 @@
                <div class="flip-card-front text-white" style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
-                     <h4>Transporte<br> Multimodal</h4>
+                     <h4 style="border:solid 2px red;" class="ml-n4">Transporte<br> Multimodal</h4>
                   </div>
                </div>
                <div class="flip-card-back">
                   <div class="text-verso mt-5 p-3 ml-2">
-                     <h6>• Transporte Ferroviário</h6>
-                     <h6>• Transporte Rodoviário</h6>
-                     <h6>• Gerenciamento de Risco</h6>
-                     <h6>• Gestão de agendamento no Porto e &nbsp;&nbsp;&nbsp;Depot</h6>
+                     <h6 style="line-height:0.9;">• Transporte Ferroviário</h6>
+                     <h6 style="line-height:0.9;">• Transporte Rodoviário</h6>
+                     <h6 style="line-height:0.9;">• Gerenciamento de Risco</h6>
+                     <h6 style="line-height:1;">• Gestão de agendamento no Porto e &nbsp;&nbsp;&nbsp;Depot</h6>
                   </div>
                </div>
             </div>
@@ -143,15 +143,15 @@
                <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
-                     <h4>Depot</h4>
+                     <h4 style="border:solid 2px red;" class="ml-n5">Depot</h4>
                   </div>
                </div>
                <div class="flip-card-back">
                   <div class="text-verso mt-5">
-                     <h6 class="h6">• Contrato com os principais armadores</h6>
-                     <h6 class="h6">• Reparo de Contêineres</h6>
-                     <h6 class="h6">• Reutilização de Contêineres</h6>
-                     <h6 class="h6">• Encerramento de Demurrage</h6>
+                     <h6 style="line-height:0.9;" class="h6">• Contrato com os<br> principais armadores</h6>
+                     <h6 style="line-height:0.9;" class="h6">• Reparo de Contêineres</h6>
+                     <h6 style="line-height:0.9;" class="h6">• Reutilização de Contêineres</h6>
+                     <h6 style="line-height:0.9;" class="h6">• Encerramento de Demurrage</h6>
                   </div>
                </div>
             </div>
@@ -165,15 +165,15 @@
                <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1" style="margin-left:-1vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
-                     <h4>Armazenagem</h4>
+                     <h4 style="border:solid 2px red;" class="ml-n4">Armazenagem</h4>
                   </div>
                </div>
                <div class="flip-card-back">
-                  <div class="text-verso mt-5 p-3 ml-2">
-                     <h6>• Armazenagem Conteiner</h6>
-                     <h6>• Estufagem de Conteiner</h6>
-                     <h6>• Desova de Conteiner</h6>
-                     <h6>• Armazenagem carga solta e carga geral</h6>
+                  <div class="text-verso mt-5 p-3 ml-2" style="border:solid 2px red;" class="ml-n5 p-5">
+                     <h6 style="line-height:0.5;">• Armazenagem Conteiner</h6>
+                     <h6 style="line-height:0.5;">• Estufagem de Conteiner</h6>
+                     <h6 style="line-height:0.5;">• Desova de Conteiner</h6>
+                     <h6 style="line-height:0.5;">• Armazenagem carga solta e carga geral</h6>
                   </div>
                </div>
             </div>
@@ -183,15 +183,15 @@
                <div class="flip-card-front text-white"  style="background-color:#05452e;">
                   <div class="text display-1 mx-auto" style="margin-left:-2vw;padding-top:5vh;">
                    <!--   <i class=" fa-solid fa-train-subway"></i> -->
-                     <h4>Gestão da Informação</h4>
+                     <h4 style="border:solid 2px red;" class="ml-n4">Gestão da Informação</h4>
                   </div>
                </div>
                <div class="flip-card-back">
                   <div class="text-verso mt-5 pl-2">
-                     <h6>• Tracking da Carga</h6>
-                     <h6>• APP para motoristas</h6>
-                     <h6>• Follow up das operações 24x7</h6>
-                     <h6>• Gestão de todos os elos da cadeia</h6>
+                     <h6 style="line-height:0.5;">• Tracking da Carga</h6>
+                     <h6 style="line-height:0.5;">• APP para motoristas</h6>
+                     <h6 style="line-height:0.5;">• Follow up das operações 24x7</h6>
+                     <h6 style="line-height:0.5;">• Gestão de todos os elos da cadeia</h6>
                   </div>
                </div>
             </div>
