--- a/esg.html
+++ b/esg.html
@@ -124,7 +124,7 @@
     <br><br>
     <div class="hero3 pt-5">
       <div class="mt-5 pt-5">
-        <h1 class="text-white ml-5 display-3 font-weight-bold">ESG</h1>
+        <h1 class=" text-white ml-5 font-weight-bold" style="font-size:5vw;">ESG</h1>
       </div>
     </div>
     <div class="" style="background:#007351;">
