--- a/quemsomos.html
+++ b/quemsomos.html
@@ -113,7 +113,7 @@
       <div class="hero2">
          <div data-aos="fade-left" class="float-right mt-5 pt-2 mr-2 d-md-block d-none" data-aos="fade-right" style="max-width:800px">
             <br><br>
-            <h1 class="text-white ml-5 display-3 font-weight-bold">QUEM SOMOS</h1>
+            <h1 class=" text-white ml-5 font-weight-bold" style="font-size:5vw;">QUEM SOMOS</h1>
           <!--   <h1 style="text-shadow: 2px 2px black;" class="display-4 p-4 text-white pt-5">QUEM SOMOS</h1> -->
             <p class="text-white text-justify m-3" style="font-size:20px;">
                &nbsp;&nbsp;&nbsp;&nbsp;Fundada em 2010 pela EDLP – Estação da Luz Participações, a Contrail Logística S.A. surgiu de uma parceria entre EDLP e MRS Logística. Juntas, desenvolveram um modelo logístico para o transporte de contêineres na região mais desenvolvida do país, transpondo de forma eficiente e sustentável a Serra do Mar, que separa o Porto de Santos do Planalto Paulista.<br>
