--- a/ondeestamos.html
+++ b/ondeestamos.html
@@ -107,7 +107,7 @@
       <br><br>
       <div class="hero4 pt-5">
          <div class="mt-5 pt-5">
-           <h1 class="text-white ml-5 display-3 font-weight-bold">ONDE ESTAMOS</h1>
+           <h1 class=" text-white ml-5 font-weight-bold" style="font-size:5vw;">ONDE ESTAMOS</h1>
          </div>
 <!--          <div class="mt-5 pt-5">
              <h1 style="text-shadow: 2px 2px black;" class="display-4 p-4 text-white pt-5">ONDE ESTAMOS</h1>
