--- a/quemsomos.html
+++ b/quemsomos.html
@@ -32,8 +32,8 @@
                <div class="col-6 col-xl-2 px-5">
                   <h1 class="mb-0 site-logo">
                      <a href="index.html">
-                     <img style="width:210px" src="logo-2022-rgb.png" id="logoBranco">
-                     <img style="width:210px" src="logo-2022.png" id="logoPreto">
+                     <img style="width:210px" class="mb-2" src="logo-2022-rgb.png" id="logoBranco">
+                     <img style="width:210px" class="mb-2" src="logo-2022.png" id="logoPreto">
                      </a>
                   </h1>
                </div>
