--- a/esg.html
+++ b/esg.html
@@ -41,8 +41,8 @@
           <div class="col-6 col-xl-2 px-5">
             <h1 class="mb-0 site-logo">
               <a href="index.html">
-                <img src="logo-2022-rgb.png" id="logoBranco" width="200px">
-                <img src="logo-2022.png" id="logoPreto" width="210px">
+                <img src="logo-2022-rgb.png" class="mb-2" id="logoBranco" width="200px">
+                <img src="logo-2022.png" class="mb-2" id="logoPreto" width="210px">
               </a>
             </h1>
           </div>
